NetCoreIstio/DestinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: netcoreistio-web
  namespace: net-core-samples
spec:
  host: netcoreistio-web-svc
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: netcoreistio-users
  namespace: net-core-samples
spec:
  host: netcoreistio-users-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
