NetCoreIstio/VirtualServices.yaml
#############################################
## Virtual Services
#############################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nnetcoreistio-web
  namespace: net-core-samples
spec:
  hosts:
  - netcoreistio-web-svc
  http:
  - route:
    - destination:
        host: netcoreistio-web-svc
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netcoreistio-users
  namespace: net-core-samples
spec:
  hosts:
  - netcoreistio-users-svc
  http:
  - route:
    - destination:
        host: netcoreistio-users-svc
        subset: v1
